--- a/src/styles/_spacing.scss
+++ b/src/styles/_spacing.scss
@@ -1,4 +1,4 @@
-$spacing: (0px, 5px, 10px, 15px, 20px, 25px, 30px, 35px, 40px, 45px, 50px, 55px, 60px, 65px, 70px, 75px, 80px);
+$spacing: (5px, 10px, 15px, 20px, 25px, 30px, 35px, 40px, 45px, 50px, 55px, 60px, 65px, 70px, 75px, 80px);
 $parts: (top, right, bottom, left);
 $prts: (t, r, b, l);
 
@@ -16,6 +16,10 @@ $prts: (t, r, b, l);
       }
     }
   }
+
+  &-0 {
+    padding: 0 !important;
+  }
 }
 
 .m {
@@ -31,5 +35,9 @@ $prts: (t, r, b, l);
         margin-#{nth($parts, $i)}: nth($spacing, $j) !important;
       }
     }
+  }
+
+  &-0 {
+    margin: 0 !important;
   }
 }
